apps/hermes/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  name: default-deny
  namespace: hermes
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
